height added to tile-media-bg to prevent images from cutting off

--- a/demo/styles/tile.css
+++ b/demo/styles/tile.css
@@ -138,6 +138,7 @@
   left: 0;
   top: 0;
   width: 100%;
+  height: 100%;
   border: 0px;
   -webkit-transition: transform 1s ease, margin 1s ease;
   -moz-transition: transform 1s ease, margin 1s ease;
