--- a/src/tile/_tile.scss
+++ b/src/tile/_tile.scss
@@ -66,6 +66,7 @@
   left: 0;
   top: 0;
   width: 100%;
+  height: 100%;
   border: 0px;
   @include transition(transform $long-transition ease, margin $long-transition ease);
 }
